# tbug

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: architecture.md
src/: config.rs  main.rs  main.ts
src/agent/: loop.ts  mod.rs  prompt.rs  prompt.ts
src/client/: llm.ts  mod.rs  openai_types.rs
src/executor/: mod.rs  pty.ts
src/integration/: mod.rs
src/tools/: file.ts  file_tools.rs  index.ts  mod.rs
src/utils/: diff.rs  diff.ts  mod.rs  ui.rs  ui.ts
