[package]
name = "tbug"
version = "0.1.0"
edition = "2021"
description = "AI-powered autonomous debugging assistant (Rust port)"
license = "MIT"

[[bin]]
name = "tbug"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1"
dialoguer = "0.11"
tokio-stream = { version = "0.1.18", features = ["fs"] }
regex = "1.12.3"
